--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Harian Solo</title>
+  <title>SoloHarian</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="images/favicon.ico">
@@ -46,8 +46,8 @@
             </div>
           </div>
           <div class="header_bottom">
-            <div class="header_bottom_left"><a class="logo" href="index.html">Harian<strong>Solo</strong>
-                <span>SLOGAN</span></a></div>
+            <div class="header_bottom_left"><a class="logo" href="index.html">Solo<strong>Harian</strong>
+                <span>Inspiratif dan Terpercaya</span></a></div>
             <div class="header_bottom_right"><a href="#"><img src="images/addbanner_728x90_V1.jpg" alt=""></a></div>
           </div>
         </div>
@@ -64,18 +64,20 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav custom_nav">
               <li class=""><a href="index.html">Home</a></li>
-              <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button"
-                  aria-expanded="false">Artikel dan Berita</a>
+              <li class=""> <a href="pages/artikel.html" class="" data-toggle="" role=""
+                  aria-expanded="">Artikel</a>
+                  <!-- n 
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="pages/archive-main.html">Archive</a></li>
                   <li><a href="pages/archive1.html">Archive 1</a></li>
                   <li><a href="pages/archive2.html">Archive 2</a></li>
                   <li><a href="pages/archive3.html">Archive 3</a></li>
                 </ul>
+                 -->
               </li>
-              <li><a href="pages/single.html">Single page</a></li>
-              <li><a href="pages/contact.html">Kontak</a></li>
-              <li><a href="pages/404.html">404 page</a></li>
+              <li><a href="pages/single.html">Berita</a></li>
+              <li><a href="pages/tips.html">Tips</a></li>
+              <li><a href="pages/404.html">Niaga</a></li>
             </ul>
           </div>
         </div>
@@ -151,17 +153,17 @@
           <div class="content_middle_middle">
             <div class="slick_slider2">
               <div class="single_featured_slide"> <a href="pages/single.html"><img src="images/berita10.jpeg"
-                    alt=""></a>
+                    alt="" style="height: 400px;"></a>
                 <h2><a href="pages/single.html">Berita 9</a></h2>
                 <p>TULIS</p>
               </div>
               <div class="single_featured_slide"> <a href="pages/single.html"><img src="images/berita11.jpeg"
-                    alt="" style="min-height:auto;"></a>
+                    alt="" style="height: 400px;"></a>
                 <h2><a href="#">Berita 10</a></h2>
                 <p>TULIS</p>
               </div>
               <div class="single_featured_slide"> <a href="pages/single.html"><img src="images/berita12.jpeg"
-                    alt=""></a>
+                    alt="" style="height: 400px;"></a>
                 <h2><a href="#">Berita 11</a></h2>
                 <p>TULIS</p>
               </div>
@@ -202,7 +204,7 @@
                           src="images/berita6.jpeg"></a> </div>
                     <h2 class="catg_titile"><a href="pages/single.html">Berita 5</a>
                     </h2>
-                    <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a
+                    <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span class="meta_comment"><a
                           href="#">No Comments</a></span> <span class="meta_more"><a href="#">Read More...</a></span>
                     </div>
                  </li>
@@ -216,7 +218,7 @@
                       <div class="media-body">
                         <h4 class="media-heading"><a href="pages/single.html">Berita 6
                           </a></h4>
-                        <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                        <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                             class="meta_comment"><a href="#">No Comments</a></span> </div>
                       </div>
                     </div>
@@ -226,7 +228,7 @@
                           alt="" style="height:130px"></a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 7 </a></h4>
-                        <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                        <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                             class="meta_comment"><a href="#">No Comments</a></span> </div>
                       </div>
                     </div>
@@ -236,7 +238,7 @@
                           alt="" style="height:130px"></a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 8</a></h4>
-                        <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                        <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                             class="meta_comment"><a href="#">No Comments</a></span> </div>
                       </div>
                     </div>
@@ -254,7 +256,7 @@
                       <div class="catgimg2_container"> <a href="pages/single.html"><img alt=""
                             src="images/berita10.jpeg"></a> </div>
                       <h2 class="catg_titile"><a href="#">Berita 9</a></h2>
-                      <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a
+                      <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span class="meta_comment"><a
                             href="#">No Comments</a></span> <span class="meta_more"><a href="#">Read More...</a></span>
                       </div>
                       <p>
@@ -266,7 +268,7 @@
                       <div class="media"> <a class="media-left" href="#"><img src="images/berita11.jpeg" alt=""></a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Berita 10</a></h4>
-                          <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                          <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                               class="meta_comment"><a href="#">No Comments</a></span> </div>
                         </div>
                       </div>
@@ -276,7 +278,7 @@
                             alt=""></a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Berita 11 </a></h4>
-                          <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                          <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                               class="meta_comment"><a href="#">No Comments</a></span> </div>
                         </div>
                       </div>
@@ -293,7 +295,7 @@
                       <li>
                         <div class="catgimg2_container"> <a href="#"><img alt="" src="images/berita13.jpeg"></a> </div>
                         <h2 class="catg_titile"><a href="#">Berita 12</a></h2>
-                        <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                        <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                             class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a
                               href="#">Read More...</a></span> </div>
                         <p>
@@ -306,7 +308,7 @@
                               alt=""></a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Berita 13 </a></h4>
-                            <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                            <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                                 class="meta_comment"><a href="#">No Comments</a></span> </div>
                           </div>
                         </div>
@@ -316,7 +318,7 @@
                               alt="" style="height: 100px;"></a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Berita 13(1) </a></h4>
-                            <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                            <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                                 class="meta_comment"><a href="#">No Comments</a></span> </div>
                           </div>
                         </div>
@@ -335,7 +337,7 @@
                     <li>
                       <div class="catgimg2_container"> <a href="#"><img alt="" src="images/berita14 (2).jpeg"></a> </div>
                       <h2 class="catg_titile"><a href="#">Berita 13(2)</a></h2>
-                      <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a
+                      <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span class="meta_comment"><a
                             href="#">No Comments</a></span> <span class="meta_more"><a href="#">Read More...</a></span>
                       </div>
                       <p>
@@ -350,7 +352,7 @@
                             alt="" style="height:120px"></a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Berita 13(3) </a></h4>
-                          <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                          <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                               class="meta_comment"><a href="#">No Comments</a></span> </div>
                         </div>
                       </div>
@@ -360,7 +362,7 @@
                             alt=""></a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Berita 13(4) </a></h4>
-                          <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                          <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                               class="meta_comment"><a href="#">No Comments</a></span> </div>
                         </div>
                       </div>
@@ -370,7 +372,7 @@
                             alt=""></a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Berita 13(5) </a></h4>
-                          <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span
+                          <div class="comments_box"> <span class="meta_date">tgl/bln/thn</span> <span
                               class="meta_comment"><a href="#">No Comments</a></span> </div>
                         </div>
                       </div>
@@ -487,24 +489,25 @@
                 </div>
               </div>
             </div>
+            <!-- n
             <div class="single_bottom_rightbar">
-              <h2>Blog Archive</h2>
+              <h2>Arsip Blog</h2>
               <div class="blog_archive wow fadeInDown">
                 <form action="#">
-                  <select>
-                    <option value="">Blog Archive</option>
+                  <select >
+                    <option value="">Arsip Blog</option>
                     <option value="">October(20)</option>
                   </select>
                 </form>
               </div>
-            </div>
+            </div>-->
             <div class="single_bottom_rightbar wow fadeInDown">
-              <h2>Popular Links</h2>
+              <h2>Link Populer</h2>
               <ul>
-                <li><a href="#">Blog</a></li>
                 <li><a href="#">Blog Home</a></li>
-                <li><a href="#">Error Page</a></li>
-                <li><a href="#">Social link</a></li>
+                <li><a href="#">Blog Lain</a></li>
+                <li><a href="pages/archive-main.html">Arsip</a></li>
+                <li><a href="#">Link Medsos</a></li>
                 <li><a href="#">Login</a></li>
               </ul>
             </div>
@@ -534,7 +537,7 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="single_footer_top wow fadeInDown">
-              <h2>Labels</h2>
+              <h2>Tema</h2>
               <ul class="labels_nav">
                 <li><a href="#">Tema 1</a></li>
                 <li><a href="#">Tema 2</a></li>
@@ -550,7 +553,7 @@
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="single_footer_top wow fadeInRight">
               <h2>Tentang Kami</h2>
-              <p>Solo Harian adalah... </p>
+              <p>SoloHarian adalah... </p>
             </div>
           </div>
         </div>
@@ -561,7 +564,7 @@
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="footer_bottom_left">
-              <p>Copyright &copy; 2022 <a href="index.html">Solo Harian</a></p>
+              <p>Copyright &copy; 2022 <a href="index.html">SoloHarian</a></p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
