--- a/pages/single2.html
+++ b/pages/single2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Harian Solo | Berita 2</title>
+  <title>SoloHarian | Berita 2</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="images2/favicon-1.png">
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="header_bottom">
-          <div class="header_bottom_left"><a class="logo" href="../index.html">Harian<strong>Solo</strong> <span>SLOGAN</span></a></div>
+          <div class="header_bottom_left"><a class="logo" href="../index.html">Solo<strong>Harian</strong> <span>Inspiratif dan Terpercaya</span></a></div>
           <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
         </div>
       </div>
@@ -114,10 +114,10 @@
         </div>
         <div class="post_pagination">
           <div class="prev"> <a class="angle_left" href="#"><i class="fa fa-angle-double-left"></i></a>
-            <div class="pagincontent"> <span>Post Sebelumnya</span> <a href="#">Home Page</a> </div>
+            <div class="pagincontent"> <span>Post Sebelumnya</span> <a href="D:\FULL US PROJECT\revisi1ME\pages/single.html">Berita 1</a> </div>
           </div>
           <div class="next">
-            <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="#">Berita 2</a> </div>
+            <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="#">Berita 3</a> </div>
             <a class="angle_right" href="#"><i class="fa fa-angle-double-right"></i></a> </div>
         </div>
         <div class="share_post"> <a class="facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a> <a class="twitter" href="#"><i class="fa fa-twitter"></i>Twitter</a> <a class="googleplus" href="#"><i class="fa fa-google-plus"></i>Google+</a> <a class="linkedin" href="#"><i class="fa fa-linkedin"></i>LinkedIn</a> <a class="stumbleupon" href="#"><i class="fa fa-stumbleupon"></i>StumbleUpon</a> <a class="pinterest" href="#"><i class="fa fa-pinterest"></i>Pinterest</a> </div>
@@ -309,7 +309,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInRight">
             <h2>Tentang Kami</h2>
-            <p>Solo Harian adalah... </p>
+            <p>SoloHarian adalah... </p>
           </div>
         </div>
       </div>
@@ -320,7 +320,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_left">
-            <p>Copyright &copy; 2022 <a href="../index.html">Solo Harian</a></p>
+            <p>Copyright &copy; 2022 <a href="../index.html">SoloHarian</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
