--- a/pages/tips.html
+++ b/pages/tips.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>SoloHarian | Berita 1</title>
+  <title>SoloHarian | Tips 1</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="images2/favicon-1.png">
@@ -21,66 +21,63 @@
 </head>
 
 <body>
-  <div id="preloader">
-    <div id="status">&nbsp;</div>
-  </div>
-  <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-  <div class="container">
-    <header id="header">
-      <div class="row">
-        <div class="col-lg-12 col-md-12">
-          <div class="header_top">
-            <div class="header_top_left">
-              <ul class="top_nav">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="page.html">Tentang Kami</a></li>
-                <li><a href="contact.html">Kontak</a></li>
-                <li><a href="404.html">Error Page</a></li>
-              </ul>
-            </div>
-            <div class="header_top_right">
-              <form action="#" class="search_form">
-                <input type="text" placeholder="Text to Search">
-                <input type="submit" value="">
-              </form>
-            </div>
-          </div>
-          <div class="header_bottom">
-            <div class="header_bottom_left"><a class="logo" href="../index.html">Solo<strong>Harian</strong> <span>Inspiratif dan Terpercaya</span></a></div>
-            <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <div id="navarea">
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav custom_nav">
-              <li class=""><a href="index.html">Home</a></li>
-              <li class=""> <a href="artikel.html" class="" data-toggle="" role="button"
-                  aria-expanded="false">Artikel</a>
-                  <!-- n 
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="pages/archive-main.html">Archive</a></li>
-                  <li><a href="pages/archive1.html">Archive 1</a></li>
-                  <li><a href="pages/archive2.html">Archive 2</a></li>
-                  <li><a href="pages/archive3.html">Archive 3</a></li>
-                </ul>
-              -->
-  
-              </li>
-              <li><a href="single.html">Berita</a></li>
-              <li><a href="tips.html">Tips</a></li>
-              <li><a href="404.html">Niaga</a></li>
+<div id="preloader">
+  <div id="status">&nbsp;</div>
+</div>
+<a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
+<div class="container">
+  <header id="header">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <div class="header_top">
+          <div class="header_top_left">
+            <ul class="top_nav">
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="page.html">Tentang Kami</a></li>
+              <li><a href="contact.html">Kontak</a></li>
+              <li><a href="404.html">Error Page</a></li>
             </ul>
           </div>
+          <div class="header_top_right">
+            <form action="#" class="search_form">
+              <input type="text" placeholder="Text to Search">
+              <input type="submit" value="">
+            </form>
+          </div>
         </div>
-      </nav>
+        <div class="header_bottom">
+          <div class="header_bottom_left"><a class="logo" href="../index.html">Solo<strong>Harian</strong> <span>Inspiratif dan Terpercaya</span></a></div>
+          <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
+        </div>
+      </div>
     </div>
+  </header>
+  <div id="navarea">
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav custom_nav">
+            <li class=""><a href="../index.html">Home</a></li>
+            <li class=""> <a href="artikel.html" class="" data-toggle="" role="button" aria-expanded="false">Artikel</a>
+              <!--n
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="archive-main.html">Arsip</a></li>
+                <li><a href="archive1.html">Arsip 1</a></li>
+                <li><a href="archive2.html">Arsip 2</a></li>
+                <li><a href="archive3.html">Arsip 3</a></li>
+              </ul>-->
+            </li>
+            <li><a href="single.html">Berita</a></li>
+            <li><a href="tips.html">Tips</a></li>
+            <li><a href="404.html">Niaga</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
   <section id="mainContent">
     <div class="content_bottom">
       <div class="col-lg-8 col-md-8">
@@ -89,23 +86,24 @@
             <ol class="breadcrumb">
               <li><a href="#">Home</a></li>
               <li><a href="#">Tema ?</a></li>
-              <li class="active">JUDUL BERITA 1</li>
+              <li class="active">JUDUL TIPS 1 </li>
             </ol>
-            <h2 class="post_titile">JUDUL BERITA 1</h2>
+            <h2 class="post_titile">JUDUL TIPS 1
+            </h2>
             <div class="single_page_content">
               <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Penulis</a> <span><i class="fa fa-calendar"></i>Jam-tanggal</span> <a href="#"><i class="fa fa-tags"></i>Tema ?</a> </div>
               <img class="img-center" src="../images/berita2.jpeg" alt="">
-              <p>ISI BERITA.</p>
+              <p>Isi tips</p>
               <blockquote> CATATAN PENTING. </blockquote>
-              <p>ISI BERITA </p>
+              <p>Isi tips </p>
               <ul>
-                <li>berita 1</li>
-                <li>berita 2</li>
-                <li>berita 3</li>
-                <li>berita 4</li>
-                <li>berita 5</li>
-                <li>berita 6</li>
-                <li>berita 7</li>
+                <li>tips 1</li>
+                <li>tips 2</li>
+                <li>tips 3</li>
+                <li>tips 4</li>
+                <li>tips 5</li>
+                <li>tips 6</li>
+                <li>tips 7</li>
               </ul>
               <button class="btn">Default</button>
               <button class="btn btn-primary">Primary</button>
@@ -121,7 +119,7 @@
             <div class="pagincontent"> <span>Post Sebelumnya</span> <a href="D:\FULL US PROJECT\revisi1ME/index.html">Home Page</a> </div>
           </div>
           <div class="next">
-            <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="D:\FULL US PROJECT\revisi1ME\pages/single2.html">Berita 2</a> </div>
+            <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="">Artikel 2</a> </div>
             <a class="angle_right" href="#"><i class="fa fa-angle-double-right"></i></a> </div>
         </div>
         <div class="share_post"> <a class="facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a> <a class="twitter" href="#"><i class="fa fa-twitter"></i>Twitter</a> <a class="googleplus" href="#"><i class="fa fa-google-plus"></i>Google+</a> <a class="linkedin" href="#"><i class="fa fa-linkedin"></i>LinkedIn</a> <a class="stumbleupon" href="#"><i class="fa fa-stumbleupon"></i>StumbleUpon</a> <a class="pinterest" href="#"><i class="fa fa-pinterest"></i>Pinterest</a> </div>
@@ -131,24 +129,24 @@
             <li>
               <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Berita 1</a></h4>
-                  <p>Isi Berita </p>
+                  <h4 class="media-heading"><a href="#">Tips 1</a></h4>
+                  <p>Isi tips </p>
                 </div>
               </div>
             </li>
             <li>
               <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
-                  <p>Isi Berita </p>
+                  <h4 class="media-heading"><a href="#">Tips 2</a></h4>
+                  <p>Isi tips </p>
                 </div>
               </div>
             </li>
             <li>
               <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Berita  3</a></h4>
-                  <p>Isi Berita </p>
+                  <h4 class="media-heading"><a href="#">Tips 3</a></h4>
+                  <p>Isi tips </p>
                 </div>
               </div>
             </li>
@@ -163,24 +161,24 @@
               <li>
                 <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
-                    <p>Isi Berita </p>
+                    <h4 class="media-heading"><a href="#">Tips 1 </a></h4>
+                    <p>Isi tips </p>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
-                    <p>Isi Berita </p>
+                    <h4 class="media-heading"><a href="#">Tips 2</a></h4>
+                    <p>Isi tips </p>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Berita 3 </a></h4>
-                    <p>Isi Berita </p>
+                    <h4 class="media-heading"><a href="#">Tips 3 </a></h4>
+                    <p>Isi tips </p>
                   </div>
                 </div>
               </li>
@@ -197,24 +195,24 @@
                   <li>
                     <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
-                        <p>Isi Berita </p>
+                        <h4 class="media-heading"><a href="#">Tips 1 </a></h4>
+                        <p>Isi tips </p>
                       </div>
                     </div>
                   </li>
                   <li>
                     <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
-                        <p>Isi Berita </p>
+                        <h4 class="media-heading"><a href="#">Tips 2</a></h4>
+                        <p>Isi tips </p>
                       </div>
                     </div>
                   </li>
                   <li>
                     <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Berita 3 </a></h4>
-                        <p>Isi Berita </p>
+                        <h4 class="media-heading"><a href="#">Tips 3 </a></h4>
+                        <p>Isi tips </p>
                       </div>
                     </div>
                   </li>
@@ -225,24 +223,24 @@
                   <li>
                     <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
-                        <p>Isi Berita </p>
+                        <h4 class="media-heading"><a href="#">Tips 1 </a></h4>
+                        <p>Isi tips </p>
                       </div>
                     </div>
                   </li>
                   <li>
                     <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
-                        <p>Isi Berita </p>
+                        <h4 class="media-heading"><a href="#">Tips 2</a></h4>
+                        <p>Isi tips </p>
                       </div>
                     </div>
                   </li>
                   <li>
                     <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Berita 3 </a></h4>
-                        <p>Isi Berita </p>
+                        <h4 class="media-heading"><a href="#">Tips 3 </a></h4>
+                        <p>Isi tips </p>
                       </div>
                     </div>
                   </li>
@@ -250,7 +248,6 @@
               </div>
             </div>
           </div>
-          <!--n
           <div class="single_bottom_rightbar">
             <h2>Arsip Blog</h2>
             <div class="blog_archive wow fadeInDown">
@@ -261,10 +258,9 @@
                 </select>
               </form>
             </div>
-          </div>-->
+          </div>
           <div class="single_bottom_rightbar wow fadeInDown">
             <h2>Link Populer</h2>
-            <ul>
             <ul>
               <li><a href="#">Blog Home</a></li>
               <li><a href="#">Blog lain</a></li>
