--- a/pages/404.html
+++ b/pages/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Harian solo | Pages | 404</title>
+<title>SoloHarian | 404</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,70 +18,74 @@
 <![endif]-->
 </head>
 <body>
-<div id="preloader">
-  <div id="status">&nbsp;</div>
-</div>
-<a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-<div class="container">
-  <header id="header">
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-        <div class="header_top">
-          <div class="header_top_left">
-            <ul class="top_nav">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="page.html">Tentang Kami</a></li>
-              <li><a href="contact.html">Kontak</a></li>
-              <li><a href="404.html">Error Page</a></li>
+  <div id="preloader">
+    <div id="status">&nbsp;</div>
+  </div>
+  <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
+  <div class="container">
+    <header id="header">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <div class="header_top">
+            <div class="header_top_left">
+              <ul class="top_nav">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="page.html">Tentang Kami</a></li>
+                <li><a href="contact.html">Kontak</a></li>
+                <li><a href="404.html">Error Page</a></li>
+              </ul>
+            </div>
+            <div class="header_top_right">
+              <form action="#" class="search_form">
+                <input type="text" placeholder="Text to Search">
+                <input type="submit" value="">
+              </form>
+            </div>
+          </div>
+          <div class="header_bottom">
+            <div class="header_bottom_left"><a class="logo" href="../index.html">Solo<strong>Harian</strong> <span>Inspiratif dan Terpercaya</span></a></div>
+            <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="navarea">
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav custom_nav">
+              <li class=""><a href="index.html">Home</a></li>
+              <li class=""> <a href="artikel.html" class="" data-toggle="" role="button"
+                  aria-expanded="false">Artikel</a>
+                  <!-- n 
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="pages/archive-main.html">Archive</a></li>
+                  <li><a href="pages/archive1.html">Archive 1</a></li>
+                  <li><a href="pages/archive2.html">Archive 2</a></li>
+                  <li><a href="pages/archive3.html">Archive 3</a></li>
+                </ul>
+              -->
+  
+              </li>
+              <li><a href="single.html">Berita</a></li>
+              <li><a href="tips.html">Tips</a></li>
+              <li><a href="404.html">Niaga</a></li>
             </ul>
           </div>
-          <div class="header_top_right">
-            <form action="#" class="search_form">
-              <input type="text" placeholder="Text to Search">
-              <input type="submit" value="">
-            </form>
-          </div>
         </div>
-        <div class="header_bottom">
-          <div class="header_bottom_left"><a class="logo" href="../index.html">Harian<strong>Solo</strong> <span>SLOGAN</span></a></div>
-          <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
-        </div>
-      </div>
+      </nav>
     </div>
-  </header>
-  <div id="navarea">
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav custom_nav">
-            <li class=""><a href="../index.html">Home</a></li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Artikel dan Berita</a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="archive-main.html">Archive</a></li>
-                <li><a href="archive1.html">Archive 1</a></li>
-                <li><a href="archive2.html">Archive 2</a></li>
-                <li><a href="archive3.html">Archive 3</a></li>
-              </ul>
-            </li>
-            <li><a href="single.html">Single page</a></li>
-            <li><a href="contact.html">Kontak</a></li>
-            <li><a href="404.html">404 page</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </div>
   <section id="mainContent">
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="error_page_content">
           <h1>404</h1>
-          <h2>Sorry :(</h2>
-          <h3>This page doesn't exist.</h3>
-          <p class="wow fadeInLeftBig">Please, continue to our <a href="../index.html">Home page</a></p>
+          <h2>Maaf :(</h2>
+          <h3>Halaman ini Belum Eksis</h3>
+          <p class="wow fadeInLeftBig">Kembali ke <a href="../index.html">Home page</a></p>
         </div>
       </div>
     </div>
@@ -93,7 +97,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInLeft">
-            <h2>Flicker Images</h2>
+            <h2>Gambar Berputar</h2>
             <ul class="flicker_nav">
               <li> <a href="#"><img src="../images/berita2.jpeg" alt=""></a> </li>
               <li> <a href="#"><img src="../images/berita3.jpeg" alt=""></a> </li>
@@ -108,23 +112,23 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInDown">
-            <h2>Labels</h2>
+            <h2>Tema</h2>
             <ul class="labels_nav">
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Slider</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Tema 1</a></li>
+              <li><a href="#">Tema 2</a></li>
+              <li><a href="#">Tema 3</a></li>
+              <li><a href="#">Tema 4</a></li>
+              <li><a href="#">Tema 5</a></li>
+              <li><a href="#">Tema 6</a></li>
+              <li><a href="#">Tema 7</a></li>
+              <li><a href="#">Tema 8</a></li>
             </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInRight">
             <h2>Tentang Kami</h2>
-            <p>Solo Harian adalah... </p>
+            <p>SoloHarian adalah... </p>
           </div>
         </div>
       </div>
@@ -135,12 +139,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_left">
-            <p>Copyright &copy; 2045 <a href="../index.html">magExpress</a></p>
+            <p>Copyright &copy; 2022 <a href="../index.html">SoloHarian</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
+            <p>Developed BY HintzID</p>
           </div>
         </div>
       </div>
