--- a/pages/archive-main.html
+++ b/pages/archive-main.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Harian Solo | Pages | Tentang Kami</title>
+  <title>SoloHarian | Arsip Utama</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="images2/favicon-1.png">
@@ -60,18 +60,19 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav custom_nav">
-            <li class=""><a href="../index.html">Home</a></li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Artikel dan Berita</a>
+            <li class=""><a href="index.html">Home</a></li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button"
+                aria-expanded="false">Artikel</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="archive-main.html">Archive</a></li>
-                <li><a href="archive1.html">Archive 1</a></li>
-                <li><a href="archive2.html">Archive 2</a></li>
-                <li><a href="archive3.html">Archive 3</a></li>
+                <li><a href="pages/archive-main.html">Archive</a></li>
+                <li><a href="pages/archive1.html">Archive 1</a></li>
+                <li><a href="pages/archive2.html">Archive 2</a></li>
+                <li><a href="pages/archive3.html">Archive 3</a></li>
               </ul>
             </li>
-            <li><a href="single.html">Single page</a></li>
-            <li><a href="contact.html">Kontak</a></li>
-            <li><a href="404.html">404 page</a></li>
+            <li><a href="pages/single.html">Berita</a></li>
+            <li><a href="pages/contact.html">Tips</a></li>
+            <li><a href="pages/404.html">Niaga</a></li>
           </ul>
         </div>
       </div>
@@ -284,18 +285,18 @@
             </div>
           </div>
           <div class="single_bottom_rightbar">
-            <h2>Blog Archive</h2>
+            <h2>Arsip Blog</h2>
             <div class="blog_archive wow fadeInDown">
               <form action="#">
                 <select>
-                  <option value="">Blog Archive</option>
+                  <option value="">Arsip Blog</option>
                   <option value="">October(20)</option>
                 </select>
               </form>
             </div>
           </div>
           <div class="single_bottom_rightbar wow fadeInDown">
-            <h2>Popular Lnks</h2>
+            <h2>Link Populer</h2>
             <ul>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Blog Home</a></li>
@@ -315,7 +316,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInLeft">
-            <h2>Flicker Images</h2>
+            <h2>Gambar Berputar</h2>
             <ul class="flicker_nav">
               <li> <a href="#"><img src="../images/berita2.jpeg" alt=""></a> </li>
               <li> <a href="#"><img src="../images/berita3.jpeg" alt=""></a> </li>
@@ -330,23 +331,23 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInDown">
-            <h2>Labels</h2>
+            <h2>Tema</h2>
             <ul class="labels_nav">
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Slider</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Tema 1</a></li>
+              <li><a href="#">Tema 2</a></li>
+              <li><a href="#">Tema 3</a></li>
+              <li><a href="#">Tema 4</a></li>
+              <li><a href="#">Tema 5</a></li>
+              <li><a href="#">Tema 6</a></li>
+              <li><a href="#">Tema 7</a></li>
+              <li><a href="#">Tema 8</a></li>
             </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInRight">
             <h2>Tentang Kami</h2>
-            <p>Solo Harian adalah... </p>
+            <p>SoloHarian adalah... </p>
           </div>
         </div>
       </div>
@@ -357,12 +358,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_left">
-            <p>Copyright &copy; 2045 <a href="../index.html">magExpress</a></p>
+            <p>Copyright &copy; 2022 <a href="../index.html">SoloHarian</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
+            <p>Developed BY HintzID</p>
           </div>
         </div>
       </div>
