--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Harian Solo | Kontak</title>
+<title>SoloHarian | Kontak</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,38 +18,37 @@
 <![endif]-->
 </head>
 <body>
-<div id="preloader">
-  <div id="status">&nbsp;</div>
-</div>
-<a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-<div class="container">
-  <header id="header">
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-        <div class="header_top">
-          <div class="header_top_left">
-            <ul class="top_nav">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="page.html">Tetang Kami</a></li>
-              <li><a href="contact.html">Kontak</a></li>
-              <li><a href="404.html">Error Page</a></li>
-            </ul>
+  <div id="preloader">
+    <div id="status">&nbsp;</div>
+  </div>
+  <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
+  <div class="container">
+    <header id="header">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <div class="header_top">
+            <div class="header_top_left">
+              <ul class="top_nav">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="page.html">Tentang Kami</a></li>
+                <li><a href="contact.html">Kontak</a></li>
+                <li><a href="404.html">Error Page</a></li>
+              </ul>
+            </div>
+            <div class="header_top_right">
+              <form action="#" class="search_form">
+                <input type="text" placeholder="Text to Search">
+                <input type="submit" value="">
+              </form>
+            </div>
           </div>
-          <div class="header_top_right">
-            <form action="#" class="search_form">
-              <input type="text" placeholder="Text to Search">
-              <input type="submit" value="">
-            </form>
+          <div class="header_bottom">
+            <div class="header_bottom_left"><a class="logo" href="../index.html">Solo<strong>Harian</strong> <span>Inspiratif dan Terpercaya</span></a></div>
+            <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
           </div>
-        </div>
-        <div class="header_bottom">
-          <div class="header_bottom_left"><a class="logo" href="../index.html">Harian<strong>Solo</strong> <span>SLOGAN</span></a></div>
-          <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
         </div>
       </div>
-    </div>
-  </header>
-  <div id="navarea">
+    </header>
     <div id="navarea">
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -58,22 +57,22 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav custom_nav">
-              <li class=""><a href="../index.html">Home</a></li>
-              <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Artikel dan Berita</a>
+              <li class=""><a href="index.html">Home</a></li>
+              <li class=""> <a href="artikel.html" class="" data-toggle="" role="button"
+                  aria-expanded="false">Artikel</a>
+                  <!-- n 
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="archive1.html">Archive page</a></li>
-                  <li><a href="archive1.html">Archive page</a></li>
-                  <li><a href="archive1.html">Archive page</a></li>
-                  <li><a href="archive1.html">Archive page</a></li>
+                  <li><a href="pages/archive-main.html">Archive</a></li>
+                  <li><a href="pages/archive1.html">Archive 1</a></li>
+                  <li><a href="pages/archive2.html">Archive 2</a></li>
+                  <li><a href="pages/archive3.html">Archive 3</a></li>
                 </ul>
+              -->
+  
               </li>
-              <li><a href="single.html">Single page</a></li>
-              
-              <li><a href="archive1.html">Arsip 1</a></li>
-              <li><a href="archive1.html">Arsip 2</a></li>
-              
-              <li><a href="contact.html">Kontak</a></li>
-              <li><a href="404.html">404 page</a></li>
+              <li><a href="single.html">Berita</a></li>
+              <li><a href="tips.html">Tips</a></li>
+              <li><a href="404.html">Niaga</a></li>
             </ul>
           </div>
         </div>
@@ -120,12 +119,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_left">
-            <p>Copyright &copy; 2045 <a href="../index.html">magExpress</a></p>
+            <p>Copyright &copy; 2022 <a href="../index.html">SoloHarian</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
+            <p>Developed BY HintzID</p>
           </div>
         </div>
       </div>
