--- a/pages/page.html
+++ b/pages/page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Harian Solo | Tentang Kami</title>
+  <title>SoloHarian | Tentang Kami</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="images2/favicon-1.png">
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="header_bottom">
-          <div class="header_bottom_left"><a class="logo" href="../index.html">Harian<strong>Solo</strong> <span>SLOGAN</span></a></div>
+          <div class="header_bottom_left"><a class="logo" href="../index.html">Solo<strong>Harian</strong> <span>Inspiratif dan Terpercaya</span></a></div>
           <div class="header_bottom_right"><a href="#"><img src="../images/addbanner_728x90_V1.jpg" alt=""></a></div>
         </div>
       </div>
@@ -60,18 +60,22 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav custom_nav">
-            <li class=""><a href="../index.html">Home</a></li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Artikel dan Berita</a>
+            <li class=""><a href="index.html">Home</a></li>
+            <li class=""> <a href="artikel.html" class="" data-toggle="" role="button"
+                aria-expanded="false">Artikel</a>
+                <!-- n 
               <ul class="dropdown-menu" role="menu">
-                <li><a href="archive-main.html">Archive</a></li>
-                <li><a href="archive1.html">Archive 1</a></li>
-                <li><a href="archive2.html">Archive 2</a></li>
-                <li><a href="archive3.html">Archive 3</a></li>
+                <li><a href="pages/archive-main.html">Archive</a></li>
+                <li><a href="pages/archive1.html">Archive 1</a></li>
+                <li><a href="pages/archive2.html">Archive 2</a></li>
+                <li><a href="pages/archive3.html">Archive 3</a></li>
               </ul>
+            -->
+
             </li>
-            <li><a href="single.html">Single page</a></li>
-            <li><a href="contact.html">Kontak</a></li>
-            <li><a href="404.html">404 page</a></li>
+            <li><a href="single.html">Berita</a></li>
+            <li><a href="tips.html">Tips</a></li>
+            <li><a href="404.html">Niaga</a></li>
           </ul>
         </div>
       </div>
@@ -83,9 +87,8 @@
         <div class="content_bottom_left">
           <div class="single_page_area">
             <ol class="breadcrumb">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Technology</a></li>
-              <li class="active">Duis quis erat non nunc fringilla </li>
+              <li><a href="D:\FULL US PROJECT\revisi1ME/index.html">Home</a></li>
+              <li class="active">Tentang Kami</li>
             </ol>
             <h2 class="post_titile">Tentang Kami</h2>
             <div class="single_page_content">
@@ -107,10 +110,10 @@
       <div class="col-lg-4 col-md-4">
         <div class="content_bottom_right">
           <div class="single_bottom_rightbar">
-            <h2>Recent Post</h2>
+            <h2>Post Sebelumnya</h2>
             <ul class="small_catg popular_catg wow fadeInDown">
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
                     <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                     <p>Isi Berita</p>
@@ -118,7 +121,7 @@
                 </div>
               </li>
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
                     <h4 class="media-heading"><a href="single.html">Berita 1</a></h4>
                     <p>Isi Berita</p>
@@ -126,7 +129,7 @@
                 </div>
               </li>
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
                     <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                     <p>Isi Berita</p>
@@ -144,7 +147,7 @@
               <div id="mostPopular" class="tab-pane fade in active" role="tabpanel">
                 <ul class="small_catg popular_catg wow fadeInDown">
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                         <p>Isi Berita</p>
@@ -152,7 +155,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                         <p>Isi Berita</p>
@@ -160,7 +163,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                         <p>Isi Berita</p>
@@ -172,7 +175,7 @@
               <div id="recentComent" class="tab-pane fade" role="tabpanel">
                 <ul class="small_catg popular_catg">
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                         <p>Isi Berita</p>
@@ -180,7 +183,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                         <p>Isi Berita</p>
@@ -188,7 +191,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
                         <h4 class="media-heading"><a href="#">Berita 1</a></h4>
                         <p>Isi Berita</p>
@@ -199,24 +202,25 @@
               </div>
             </div>
           </div>
+          <!--n
           <div class="single_bottom_rightbar">
-            <h2>Blog Archive</h2>
+            <h2>Arsip Blog</h2>
             <div class="blog_archive wow fadeInDown">
               <form action="#">
                 <select>
-                  <option value="">Blog Archive</option>
+                  <option value="">Arsip Blog</option>
                   <option value="">October(20)</option>
                 </select>
               </form>
             </div>
-          </div>
+          </div>-->
           <div class="single_bottom_rightbar wow fadeInDown">
-            <h2>Popular Lnks</h2>
+            <h2>Link Populer</h2>
             <ul>
-              <li><a href="#">Blog</a></li>
               <li><a href="#">Blog Home</a></li>
-              <li><a href="#">Error Page</a></li>
-              <li><a href="#">Social link</a></li>
+              <li><a href="#">Blog lain</a></li>
+              <li><a href="archive-main.html">Arsip</a></li>
+              <li><a href="#">Link Medsos</a></li>
               <li><a href="#">Login</a></li>
             </ul>
           </div>
@@ -231,7 +235,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInLeft">
-            <h2>Flicker Images</h2>
+            <h2>Gambar Berputar</h2>
             <ul class="flicker_nav">
               <li> <a href="#"><img src="../images/berita2.jpeg" alt=""></a> </li>
               <li> <a href="#"><img src="../images/berita3.jpeg" alt=""></a> </li>
@@ -246,23 +250,23 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInDown">
-            <h2>Labels</h2>
+            <h2>TEMA</h2>
             <ul class="labels_nav">
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Slider</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Tema 1</a></li>
+              <li><a href="#">Tema 2</a></li>
+              <li><a href="#">Tema 3</a></li>
+              <li><a href="#">Tema 4</a></li>
+              <li><a href="#">Tema 5</a></li>
+              <li><a href="#">Tema 6</a></li>
+              <li><a href="#">Tema 7</a></li>
+              <li><a href="#">Tema 8</a></li>
             </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInRight">
             <h2>Tentang Kami</h2>
-              <p>Solo Harian adalah... </p>
+              <p>SoloHarian adalah... </p>
           </div>
         </div>
       </div>
@@ -273,12 +277,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_left">
-            <p>Copyright &copy; 2045 <a href="../index.html">magExpress</a></p>
+            <p>Copyright &copy; 2022 <a href="../index.html">SoloHarian</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
+            <p>Developed BY HintzID</p>
           </div>
         </div>
       </div>
