--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </li>
               <li><a href="pages/single.html">Berita</a></li>
               <li><a href="pages/tips.html">Tips</a></li>
-              <li><a href="pages/404.html">Niaga</a></li>
+              <li><a href="pages/niaga.html">Niaga</a></li>
             </ul>
           </div>
         </div>
@@ -93,7 +93,7 @@
                   <h2><a class="slider_tittle" href="pages/single.html">Berita 1</a></h2>
                 </div>
                 <div class="single_iteam"><img src="images/berita3.jpeg" alt=""style="height:425px;" width="550px">
-                  <h2><a class="slider_tittle" href="pages/single2.html">Berita 2 </a></h2>
+                  <h2><a class="slider_tittle" href="pages/single2.html">Niaga 2 </a></h2>
                 </div>
                 <div class="single_iteam"><img src="images/berita4.jpeg" alt="" style="height:425px;" width="550px">
                   <h2><a class="slider_tittle" href="pages/single.html">Berita 3 </a></h2>
@@ -143,7 +143,7 @@
                 <li>
                   <div class="catgimg_container"> <a href="pages/single.html" class="catg1_img"><img alt=""
                         src="images/berita3.jpeg"></a></div>
-                  <h3 class="post_titile"><a href="pages/single.html">Berita 2</a></h3>
+                  <h3 class="post_titile"><a href="pages/single.html">Niaga 2</a></h3>
                 </li>
               </ul>
             </div>
@@ -401,7 +401,7 @@
                   <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt=""
                         src="images/berita3.jpeg"> </a>
                     <div class="media-body">
-                      <h4 class="media-heading"><a href="#">Berita 2</a></h4>
+                      <h4 class="media-heading"><a href="#">Niaga 2</a></h4>
                       <p></p>
                     </div>
                   </div>
@@ -440,8 +440,8 @@
                       <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="images/berita3.jpeg"
                             alt=""></a>
                         <div class="media-body">
-                          <h4 class="media-heading"><a href="#">Berita 2</a></h4>
-                          <p>Isi Tulisan Berita 2 </p>
+                          <h4 class="media-heading"><a href="#">Niaga 2</a></h4>
+                          <p>Isi Tulisan Niaga 2 </p>
                         </div>
                       </div>
                     </li>
@@ -471,8 +471,8 @@
                       <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="images/berita3.jpeg"
                             alt=""></a>
                         <div class="media-body">
-                          <h4 class="media-heading"><a href="#">Berita 2</a></h4>
-                          <p>Isi Berita 2</p>
+                          <h4 class="media-heading"><a href="#">Niaga 2</a></h4>
+                          <p>Isi Niaga 2</p>
                         </div>
                       </div>
                     </li>
