--- a/pages/artikel.html
+++ b/pages/artikel.html
@@ -72,7 +72,7 @@
             </li>
             <li><a href="single.html">Berita</a></li>
             <li><a href="contact.html">Tips</a></li>
-            <li><a href="404.html">Niaga</a></li>
+            <li><a href="niaga.html">Niaga</a></li>
           </ul>
         </div>
       </div>
